objects/ssot__AssessmentQuestionAssignment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentQuestionId__c</fullName>
        <label>Assessment Question</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentQuestionSetId__c</fullName>
        <label>Assessment Question Set</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Question Assignment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291288183_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentQuestionAssignment_Assessm_rel</label>
        <referenceTo>ssot__AssessmentQuestion__dlm</referenceTo>
        <relationshipLabel>AssessmentQuestionAssignment_Assessm_rel</relationshipLabel>
        <relationshipName>rel_1720291288183_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291813280_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssessmentQuestionAssignment_Assessm_rel</label>
        <referenceTo>ssot__AssessmentQuestionSet__dlm</referenceTo>
        <relationshipLabel>AssessmentQuestionAssignment_Assessm_rel</relationshipLabel>
        <relationshipName>rel_1720291813280_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>